# microthink

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-02-01-fix-code-review-issues.md  2026-02-02-comprehensive-improvements-design.md  2026-02-02-phase1-core-foundations.md  2026-02-02-phase2-performance-reliability.md  2026-02-02-phase3-capabilities.md  2026-02-02-phase4-developer-experience.md  2026-02-02-quick-wins-implementation.md
examples/: chat.py  demo.py
src/microthink/: __init__.py  async_client.py  batch.py  callbacks.py  client.py  config.py  metrics.py  session.py
src/microthink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/microthink/core/: cache.py  parser.py  prompts.py  retry.py  schema.py
src/microthink/tools/: __init__.py  registry.py  search.py
src/microthink/utils/: logger.py  logging_config.py
tests/: test_async.py  test_batch.py  test_cache.py  test_callbacks.py  test_config.py  test_errors.py  test_logging.py  test_metrics.py  test_personas.py  test_retry.py  test_schema.py  test_session.py  test_streaming.py  test_tools.py
